--- a/DAY 2/portfolio(1).html
+++ b/DAY 2/portfolio(1).html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ruthramoorthy | Personal Portfolio</title>
+    <title>SUNDAR | Personal Portfolio</title>
 </head>
 <body>
 
 <header>
-    <h1>ruthramoorthy</h1>
+    <h1>SUNDAR</h1>
     <p>
         Hello! I am a <strong>B.Tech CSE student</strong> passionate about 
         <em>software development</em>, <u>problem solving</u>, and 
@@ -183,6 +183,7 @@
 
 </body>
 </html>
+
 
 
 
