--- a/DAY 3/portfolio.html
+++ b/DAY 3/portfolio.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ruthramoorthy | Personal Portfolio</title>
+    <title>sundar | Personal Portfolio</title>
     <link rel="stylesheet" href="C:\Users\Admin\Desktop\mtern stack (ruth)\day 3\style.css">
 </head>
 <body>
 
 <header>
-    <h1>ruthramoorthy</h1>
+    <h1>sundar</h1>
     <p>
         Hello! I am a <strong>B.Tech CSE student</strong> passionate about 
         <em>software development</em>, <u>problem solving</u>, and 
@@ -184,6 +184,7 @@
 
 </body>
 </html>
+
 
 
 
